// Auto-Generated by si-registry!
// Do not edit by hand!
// This means you! It won't last! You'll be sad!

syntax = "proto3";

package si.service_entity;
import "google/protobuf/wrappers.proto";
import "si-registry/proto/si.data.proto";
import "si-registry/proto/si.cea.proto";
import "si-registry/proto/si.service_component.proto";
service ServiceEntity {
  rpc ServiceEntityGet(ServiceEntityGetRequest) returns (ServiceEntityGetReply);
  rpc ServiceEntityList(ServiceEntityListRequest) returns (ServiceEntityListReply);
  rpc ServiceEntityCreate(ServiceEntityCreateRequest) returns (ServiceEntityCreateReply);
  rpc ServiceEntityDelete(ServiceEntityDeleteRequest) returns (ServiceEntityDeleteReply);
  rpc ServiceEntityUpdate(ServiceEntityUpdateRequest) returns (ServiceEntityUpdateReply);
  rpc ServiceEntitySync(ServiceEntitySyncRequest) returns (ServiceEntitySyncReply);
}
message ServiceEntityProperties {
}
message ServiceEntity {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue display_name = 3;
  si.data.DataStorable si_storable = 4;
  google.protobuf.StringValue description = 5;
  si.cea.EntitySiProperties si_properties = 6;
  si.service_entity.ServiceEntityProperties properties = 7;
  si.service_component.ServiceComponentConstraints constraints = 8;
  si.service_component.ServiceComponentConstraints implicit_constraints = 9;
}
message ServiceEntityGetRequest {
  google.protobuf.StringValue id = 1001;
}
message ServiceEntityGetReply {
  si.service_entity.ServiceEntity item = 1001;
}
message ServiceEntityListRequest {
  si.data.DataQuery query = 1;
  google.protobuf.UInt32Value page_size = 2;
  google.protobuf.StringValue order_by = 3;
  si.data.DataPageTokenOrderByDirection order_by_direction = 4;
  google.protobuf.StringValue page_token = 5;
  google.protobuf.StringValue scope_by_tenant_id = 6;
}
message ServiceEntityListReply {
  repeated si.service_entity.ServiceEntity items = 1;
  google.protobuf.UInt32Value total_count = 2;
  google.protobuf.StringValue next_page_token = 3;
}
message ServiceEntityCreateRequest {
  google.protobuf.StringValue name = 1;
  google.protobuf.StringValue display_name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.StringValue workspace_id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.service_entity.ServiceEntityProperties properties = 4;
  si.service_component.ServiceComponentConstraints constraints = 5;
}
message ServiceEntityCreateReply {
  si.service_entity.ServiceEntity item = 1;
}
message ServiceEntityDeleteRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
}
message ServiceEntityDeleteReply {
  si.service_entity.ServiceEntity item = 1001;
}
message ServiceEntityUpdateRequestUpdate {
  google.protobuf.StringValue name = 1001;
  google.protobuf.StringValue description = 1002;
  si.service_entity.ServiceEntityProperties properties = 1003;
}
message ServiceEntityUpdateRequest {
  google.protobuf.StringValue id = 1001;
  google.protobuf.StringValue change_set_id = 1002;
  si.service_entity.ServiceEntityUpdateRequestUpdate update = 1003;
}
message ServiceEntityUpdateReply {
  si.service_entity.ServiceEntity item = 1001;
}
message ServiceEntitySyncRequest {
  google.protobuf.StringValue id = 1;
}
message ServiceEntitySyncReply {
  si.service_entity_event.ServiceEntityEvent item = 1;
}
